tests/parsing/type_redefinition_in_inst/stderr.golden
error: redefinition of type 't', first definition line 2 column 7
bus.fbd +3:7
   |
 3 | 	type t static
   | 	     ^
